bug fixed:toggle switch navbar span on mobile view not correct z-index

--- a/src/css/aboutMe.css
+++ b/src/css/aboutMe.css
@@ -16,7 +16,9 @@
   padding: 2rem;
   border: 2px solid transparent;
   border-radius: 8px;
-  transition: box-shadow 0.3s, border 0.3s;
+  transition:
+    box-shadow 0.3s,
+    border 0.3s;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -63,7 +65,9 @@
   border-radius: 10px;
   background: #111821;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  transition: border 0.3s, box-shadow 0.3s;
+  transition:
+    border 0.3s,
+    box-shadow 0.3s;
   overflow: hidden;
   padding: 2rem;
 }
@@ -78,7 +82,6 @@
   line-height: 1.6;
 }
 
-/* Add these media queries at the end of aboutMe.css */
 @media (max-width: 768px) {
   .aboutme-card {
     max-width: 90%;
